import org.apache.tools.ant.taskdefs.condition.Os

plugins {
    id 'java-library'
    id 'com.vanniktech.maven.publish' version '0.36.0'
}

group = 'io.github.jwharm.cairobindings'
version = '1.18.4.3'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    compileOnly 'org.java-gi:glib:0.15.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test) {
    // Configure library path for MacOS (Homebrew) and set MacOS-specific JVM parameter
    if (Os.isFamily(Os.FAMILY_MAC)) {
        jvmArgs += '-Djava.library.path=/opt/homebrew/lib'
        jvmArgs += '-XstartOnFirstThread'
    }

    // Configure library path for Arch, Fedora and Debian/Ubuntu
    else if (Os.isFamily(Os.FAMILY_UNIX)) {
        jvmArgs += '-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu'
    }

    // Configure library path for Windows (MSYS2)
    else if (Os.isFamily(Os.FAMILY_WINDOWS)) {
        jvmArgs += '-Djava.library.path=C:/msys64/mingw64/bin'
    }

    useJUnitPlatform()
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

mavenPublishing {
    publishToMavenCentral()
    signAllPublications()
    coordinates("io.github.jwharm.cairobindings", 'cairo', project.version.toString())
    pom {
        name = "io.github.jwharm.cairobindings:cairo"
        description = 'Java language bindings for cairo'
        url = 'https://github.com/jwharm/cairo-java-bindings/'
        licenses {
            license {
                name = 'GNU Lesser General Public License, version 2.1'
                url = 'https://www.gnu.org/licenses/lgpl-2.1.txt'
            }
        }
        developers {
            developer {
                id = 'jwharm'
                name = 'Jan-Willem Harmannij'
                email = 'jwharmannij@gmail.com'
                url = 'https://github.com/jwharm'
            }
        }
        scm {
            connection = 'scm:git:git://github.com/jwharm/cairo-java-bindings.git'
            developerConnection = 'scm:git:ssh://github.com:jwharm/cairo-java-bindings.git'
            url = 'http://github.com/jwharm/cairo-java-bindings/tree/master'
        }
    }
}
